Se eliminan acciones del init de los Servlets y se pasan a un @WebListener para asegurarse de que no se llaman varias veces durante la vida del servicio